Update meta description values

--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Inclusivity and Accessibility'
+description: 'Create more inclusive and accessible solutions using our micro-framework and its components.'
 order: 5
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/accessibility.mdx'
 ---
