--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Installation'
+description: 'Install Spruce easily with npm or use it as a standalone dependency; it's all on you.'
 order: 2
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/installation.mdx'
 ---
