--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Internationalization'
+description: 'With core internationalization support through modern CSS and its logical properties, you can handle RTL layouts more easily with Spruce CSS.'
 order: 6
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/internationalization.mdx'
 ---
