--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Introduction'
+description: 'Read more about our goals and intentions with Spruce CSS framework. Why we built it, and why is it a good choice for you too?'
 order: 1
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/introduction.mdx'
 ---
