--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Sass'
+description: 'Utilizing Sass helps you achieve more with less code and faster with built-in mixins and functions.'
 order: 4
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/sass.mdx'
 ---
