--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Structure and Code'
+description: 'Explore the style guide and structure of Spruce CSS micro-framework. You can find some core principles and the main structure on this page.'
 order: 3
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/structure-and-code.mdx'
 ---
