Update Print post

--- a/src/docs/getting-started/print.mdx
+++ b/src/docs/getting-started/print.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Print'
+description: 'With some necessary print styles, you can control better your print view with Spruce CSS framework.'
 order: 7
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/print.mdx'
 ---
@@ -11,7 +12,7 @@ You can turn on basic print styles from the `$settings` map; set the `print` to 
 ```scss
 @use '~sprucecss/scss/spruce' with (
   $settings: (
-    print: true
+    'print': true
   )
 );
 ```
@@ -19,6 +20,7 @@ You can turn on basic print styles from the `$settings` map; set the `print` to 
 [Print-related variables](/docs/sass/variables#print).
 
 **You get the following with the print styles:**
-- with the `$print-page-margin` variable (default value: 2cm), you can control the margin of the page.
-- With the `$print-hidden-elements`, you can hide elements from print view.
+
+- with the `page-margin` key (default value: 2cm), you can control the margin of the printed page.
+- With the `hidden-elements` key, you can hide elements from print view.
 - You get the URLs of the links after `<a>` elements.
