Update contribution and appendix

--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Appendix'
+description: 'In the appendix, you can find some references that inspired or gave any input related to any aspects of Spruce CSS or our learning in general.'
 order: 10
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/appendix.mdx'
 ---
@@ -18,3 +19,4 @@ Learning modern CSS can be rewarding. So here are a lot of good resources if you
 - [Form Design Patterns](https://www.smashingmagazine.com/printed-books/form-design-patterns/) - Forms mean the interaction on any webpage or application. Making them suitable is crucial. Learn more from one of the best books on this topic.
 - [Modern CSS Solutions](https://moderncss.dev/) - An excellent list of modern CSS solutions.
 - [Accessibility for Everyone](https://abookapart.com/products/accessibility-for-everyone) - A light introduction about accessibility.
+- [Defensive CSS](https://defensivecss.dev/) - Practical CSS and design tips that helps in building future-proof user interfaces.
