--- a/src/docs/getting-started/contribution.mdx
+++ b/src/docs/getting-started/contribution.mdx
@@ -1,10 +1,11 @@
 ---
 title: 'Contribution'
+description: 'You can help us tremendously with any small contribution, like fixing a typo.'
 order: 9
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/contribution.mdx'
 ---
 
-<p className="lead">First of all, thank you for considering contributing to Spruce. We appreciate your time and effort in making this CSS system better. We want to make contributing to this project as easy and transparent as possible, whether it's:</p>
+<p className="lead">First, thank you for considering contributing to Spruce. We appreciate your time and effort in making this CSS system better. We want to make contributing to this project as easy and transparent as possible, whether it's:</p>
 
 - reporting a bug.
 - Discuss the current state of the code.
@@ -12,12 +13,12 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/ge
 - Proposing new features.
 - Becoming a maintainer.
 
-Following these guidelines helps communicate that you respect the developers' time managing and developing this open-source project. In return, they should reciprocate that respect in addressing your issue, assessing changes, and helping you finalize your pull requests.
+Following these guidelines helps communicate that you respect the developers' time managing and developing this open-source project. In return, they should reciprocate that respect by addressing your issue, assessing changes, and helping you finalize your pull requests.
 
 ## Ground Rules
 
 Responsibilities
-* Create issues for any significant changes and enhancements that you wish to make. Discuss things transparently, and get community feedback.
+* Create issues for any significant changes and enhancements you wish to make. Discuss things transparently, and get community feedback.
 * Keep feature versions as small as possible, preferably one new feature per commit.
 
 ### All Code Changes Happen Through Pull Requests
@@ -25,10 +26,10 @@ Responsibilities
 Pull requests are the best way to propose changes to the codebase. We actively welcome your pull requests:
 
 1. Fork the repo and create your branch from `main`.
-2. If you've added code that should be tested, add tests.
+2. Add tests if you've added code that should be tested.
 3. If you've changed APIs, update the documentation.
 4. Ensure the test suite passes.
-5. Make sure your code lints.
+5. Make sure you lint your code.
 6. Open a pull request!
 
 ## Your First Contribution
