--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -15,6 +15,8 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/ge
 - We use mostly BEM when a more complicated structure is necessary.
 - We try not to use px as units. Right now, it is only present at border values.
 - We use modern Sass with `@use` and `@forward`.
+- We mark the strings as strings, so we will wrap any value that is technically one of them with single quotations.
+- We use trailing commas in the map declarations.
 
 ## BEM (Block Element Modifier)
 
