Update description at settings

--- a/src/docs/customization/settings.mdx
+++ b/src/docs/customization/settings.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Settings'
+description: 'By changing the settings parameters, you can customize a generic part of the behavior of Spruce CSS.'
 order: 11
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/customization/settings.mdx'
 ---
