--- a/src/docs/getting-started/print.mdx
+++ b/src/docs/getting-started/print.mdx
@@ -12,8 +12,8 @@ You can turn on basic print styles from the `$settings` map; set the `print` to 
 ```scss
 @use '~sprucecss/scss/spruce' with (
   $settings: (
-    'print': true
-  )
+    'print': true,
+  ),
 );
 ```
 
