--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -377,6 +377,43 @@ You can access any font size with the [font-size() helper function](/docs/sass/f
 );
 ```
 
+## Generators
+
+```scss
+@use '~sprucecss/scss/spruce' with (
+  $generators: (
+    'content': (
+      'accessibility': true,
+      'default': true,
+      'display': true,
+      'divider': true,
+      'layout': true,
+      'media': true,
+      'normalize': true,
+      'print': true,
+      'root': true,
+      'table': true,
+      'typography': true,
+      'utilities': true,
+    ),
+    'form': (
+      'btn': true,
+      'file-btn': true,
+      'form-check': true,
+      'form-control': true,
+      'form-description': true,
+      'form-feedback': true,
+      'form-fieldset': true,
+      'form-group': true,
+      'form-label': true,
+      'form-range': true,
+      'form-row': true,
+      'form-switch': true,
+    ),
+  ),
+);
+```
+
 ## Tables
 
 ```scss
