--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -12,7 +12,7 @@ Use the `table` class on an HTML `<table>` element to use the default styling.
 
 <Preview>
   {
-    <table>
+    <table className="table">
       <caption>A generic introduction to the table.</caption>
       <thead>
         <tr>
