--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -28,11 +28,11 @@ Get color value by key and type name from the `$colors` map. The `$colors` map i
 
 ```scss
 a {
-  color: spruce.color(primary);
+  color: color('primary');
 }
 
 .has-error {
-  color: spruce.color(danger, alert);
+  color: color('danger', 'alert');
 }
 ```
 
@@ -53,7 +53,33 @@ Get a contrast color (black or white) based on the given one. Spruce use this fu
 
 ```scss
 a {
-  color: spruce.color-contrast(blue); // return white (hsl(0 0% 100%))
+  color: color-contrast(blue); // return white (hsl(0 0% 100%))
+}
+```
+
+## config
+
+Using the `config()` function, you can get any key value from any map. It is a wrapper function for `map.get`.
+
+If you use the CSS custom property mode, you should always use this function because this will return you the proper custom property.
+
+### Argument(s)
+
+| Name               | Default Value     | Description                                         |
+|--------------------|-------------------|-----------------------------------------------------|
+| `$key`             |                   | The name of the key.                                |
+| `$map`             |                   | The name of the map.                                |
+| `$custom-property` | `true`            | Wheater if you want CSS custom property or not.     |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_config.scss#L29)
+
+### Example(s)
+
+```scss
+.element {
+  border-radius: config('border-radius-lg', $display);
+  height: 3rem;
+  width: 3rem;
 }
 ```
 
@@ -76,12 +102,12 @@ Get a value from the `$font-sizes` map by key name. By default, the function giv
 
 ```scss
 .title {
-  font-size: spruce.font-size(h2);
+  font-size: font-size('h2');
 }
 
 .serial-number {
-  color: spruce.color(primary);
-  font-size: spruce.font-size(h3, $scaler: 30);
+  color: color('primary');
+  font-size: font-size('h3', 30);
 }
 ```
 
@@ -102,8 +128,8 @@ Add the prefix value to a CSS custom properties. To set any CSS variable with pr
 
 ```scss
 .container {
-  @include spruce.layout-center(
-    spruce.get-css-variable(--container-gap)
+  @include layout-center(
+    get-css-variable(--container-gap)
   );
 }
 ```
@@ -126,7 +152,7 @@ It is hard to get generic font sizes that we can use throughout a whole project.
 
 ```scss
 .testimonial-title {
-  font-size: spruce.responsive-font-size(4rem, 30);
+  font-size: responsive-font-size(4rem, 30);
 }
 ```
 
@@ -145,7 +171,7 @@ Get a value by key name from the `$settings` map.
 ### Example(s)
 
 ```scss
-@if spruce.setting(hyphens) {
+@if setting('hyphens') {
   p,
   li,
   h1,
@@ -176,7 +202,7 @@ Get a value by key name from the `$spacers` map.
 
 ```scss
 .prism-code {
-  padding: spruce.spacer(xs) spruce.spacer(m);
+  padding: spacer('xs') spacer('m');
 }
 ```
 
@@ -198,15 +224,15 @@ Create a `clamp()` declaration with values from the `$spacers` map or from any g
 
 ```scss
 .block {
-  padding: spruce.spacer-clamp(m, l);
+  padding: spacer-clamp('m', 'l');
 }
 
 .block {
-  padding: spruce.spacer-clamp(xs, s, '2vw');
+  padding: spacer-clamp('xs', 's', '2vw');
 }
 
 .block {
-  padding: spruce.spacer-clamp(2rem, l);
+  padding: spacer-clamp(2rem, 'l');
 }
 ```
 
@@ -276,8 +302,8 @@ Get the transition values by key name. **The function returns a CSS custom prope
 
 ```scss
 .custom-link {
-  transition-duration: spruce.transition(duration);
+  transition-duration: transition('duration');
   transition-property: all;
-  transition-timing-function: spruce.transition(timing-function);
+  transition-timing-function: transition('timing-function');
 }
 ```
